[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Images/Stages/philly/sky.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Stages/philly/city.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Stages/philly/behindTrain.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Stages/philly.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Stages/philly/train.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Stages/philly/street.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Stages/philly/win0.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Stages/philly/win3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Stages/philly/win1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Stages/philly/win4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Stages/philly/win2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sounds/Stages/philly/train_passes.ogg" type="AudioStream" id=12]
[ext_resource path="res://Scenes/Stages/philly_particles.gd" type="Script" id=13]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.744565, 1 ), -3.22566e-07, -3.22566e-07, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 25.0
scale_random = 1.0
scale_curve = SubResource( 2 )

[node name="philly" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Far BG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( -640, -360 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/Far BG"]
position = Vector2( -100, 0 )
texture = ExtResource( 1 )
centered = false

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )
motion_offset = Vector2( -448, -252 )

[node name="City" type="Sprite" parent="ParallaxBackground/BG"]
position = Vector2( -10, 0 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )
centered = false

[node name="Light 1" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -10, 0 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 7 )
centered = false

[node name="Light 2" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -10, 0 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 9 )
centered = false

[node name="Light 3" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -10, 0 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 11 )
centered = false

[node name="Light 4" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -10, 0 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 8 )
centered = false

[node name="Light 5" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -10, 0 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
centered = false

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Behind Train" type="Sprite" parent="ParallaxBackground/Foreground"]
position = Vector2( -40, 50 )
texture = ExtResource( 3 )
centered = false

[node name="Train" type="Sprite" parent="ParallaxBackground/Foreground"]
position = Vector2( 2000, 360 )
texture = ExtResource( 5 )
centered = false

[node name="Particles" type="Node2D" parent="ParallaxBackground/Foreground"]
script = ExtResource( 13 )

[node name="Particle1" type="Particles2D" parent="ParallaxBackground/Foreground/Particles"]
position = Vector2( 745, 653 )
emitting = false
amount = 100
process_material = SubResource( 3 )

[node name="Particle2" type="Particles2D" parent="ParallaxBackground/Foreground/Particles"]
position = Vector2( 391, 653 )
emitting = false
amount = 100
process_material = SubResource( 3 )

[node name="Particle3" type="Particles2D" parent="ParallaxBackground/Foreground/Particles"]
position = Vector2( 1083, 653 )
emitting = false
amount = 100
process_material = SubResource( 3 )

[node name="Street" type="Sprite" parent="ParallaxBackground/Foreground"]
position = Vector2( -40, 50 )
texture = ExtResource( 6 )
centered = false

[node name="Player Point" type="Node2D" parent="."]
position = Vector2( 974, 800 )

[node name="Dad Point" type="Node2D" parent="."]
position = Vector2( 417, 816 )

[node name="GF Point" type="Node2D" parent="."]
position = Vector2( 700, 716 )

[node name="Train" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
